# semverbump

./: README.md  main.py  pyproject.toml  tox.ini
semverbump/: bump.py  bump_experimental.py  cli.py  package.json  pyproject.toml  utils.py
src/: bump.py  cli.py  config.py
tests/: invalid.md  sample.toml  test_bump.py
verbump/: bump.py  cli.py  config.py
