[tool.poetry]
name = "semverbump"
version = "0.1.0"
description = "A CLI tool that auto-bumps version number for your app."
authors = ["Nikhil Akki <17634231+nikhilakki@users.noreply.github.com >"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
tox = "^4.4.12"
coverage = "^7.2.3"
black = "^23.3.0"
bandit = "^1.7.5"
ruff = "^0.0.262"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
